Added winner nature, liked flavor and berries

--- a/rest1/templates/submit.html
+++ b/rest1/templates/submit.html
@@ -7,9 +7,11 @@
     <h3>Enemy pokemon name is: {{ pokemon_2.name }}</h3>
     <p>Enemy pokemon level is: {{ pokemon_2.level }}</p>
     <p>Enemy pokemon basic power is: {{ pokemon_2.power }}</p>
-    <p>Enemy pokemon type is: {{ pokemon_2.list_types() }}</p>
+    <p>Enemy pokemon type is: {{ pokemon_2.list_types() }} </p>
 
 
 <h2>And the winner is: {{ winner.name }}</h2>
+<p>The winner pokemon likes {{ flavor }} flavor</p>
+<p>Berry for the winner: {{ berry }} berry</p>
 </body>
 </html>
